# dbt

./: .gitignore  databricks.yml  pyproject.toml
dbt_project/: check_views.py  check_views.sql  check_views2.py
dbt_project/models/: diamonds_four_cs.sql
