[project]
name = "dbt"
version = "0.1.0"
description = ""
authors = [
    {name = "Charlie Clark",email = "charles.clark@theaa.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "databricks-cli (>=0.18.0,<0.19.0)",
    "dbt-databricks (>=1.10.8,<2.0.0)",
    "dbt-core (>=1.10.7,<2.0.0)",
    "dbt-bigquery (>=1.10.1,<2.0.0)",
    "pyspark (>=4.0.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "dbt", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
